# old-dungeon-crawler

./: Application.cpp  Application.h  BossRoom.cpp  BossRoom.h  CMakeLists.txt  DeathMenu.cpp  DeathMenu.h  DungeonRoom.cpp  DungeonRoom.h  GameInstance.cpp  GameInstance.h  HallRoom.cpp  HallRoom.h  Map.cpp  Map.h  PlayerState.cpp  PlayerState.h  README.md  Room.cpp  Room.h  RoomChoice.cpp  RoomChoice.h  Weapon.cpp  Weapon.h  main.cpp
Enemies/: BasicEnemy.cpp  BasicEnemy.h  BossEnemy.cpp  BossEnemy.h  Enemy.cpp  Enemy.h
EnemyAbilities/: Ability_InstantCasterDamage.cpp  Ability_InstantCasterDamage.h  Ability_InstantPlayerDamage.cpp  Ability_InstantPlayerDamage.h  Ability_PlayerHeal.cpp  Ability_PlayerHeal.h  EnemyAbility.cpp  EnemyAbility.h
Enums/: EnemyType.h  ForceGenerateState.h  ForegroundConsoleColor.cpp  ForegroundConsoleColor.h  TileInteractionType.h
JSON/: Enemies.json  Tiles.json  UIElements.json  Weapons.json
Managers/: ConsoleManager.cpp  ConsoleManager.h  InputManager.cpp  InputManager.h  JsonManager.cpp  JsonManager.h  Random.cpp  Random.h  StringExtensions.cpp  StringExtensions.h  Vector2.cpp  Vector2.h
Menus/: CombatMenu.cpp  CombatMenu.h  DifficultyMenu.cpp  DifficultyMenu.h  LoreMenu.cpp  LoreMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  RoomMenu.cpp  RoomMenu.h
TXT/: Lore.txt
TileTypes/: DoorTile.cpp  DoorTile.h  EmptyTile.cpp  EmptyTile.h  EnemyTile.cpp  EnemyTile.h  InteractableTile.cpp  InteractableTile.h  StaticTile.cpp  StaticTile.h  Tile.cpp  Tile.h  WallTile.cpp  WallTile.h  WeaponTile.cpp  WeaponTile.h
