cmake_minimum_required(VERSION 3.30)
project(ZOO_PROJEKT)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXE_LINKER_FLAGS "-static")

include_directories("include")

add_executable(ZOO_PROJEKT main.cpp
        Managers/InputManager.cpp
        Managers/InputManager.h
        Application.cpp
        Application.h
        Weapon.cpp
        Weapon.h
        Managers/Vector2.cpp
        Managers/Vector2.h
        Menus/Menu.cpp
        Menus/Menu.h
        Menus/MainMenu.cpp
        Menus/MainMenu.h
        DeathMenu.cpp
        DeathMenu.h
        Menus/DifficultyMenu.cpp
        Menus/DifficultyMenu.h
        TileTypes/Tile.cpp
        TileTypes/Tile.h
        TileTypes/StaticTile.cpp
        TileTypes/StaticTile.h
        Room.cpp
        Room.h
        Menus/RoomMenu.cpp
        Menus/RoomMenu.h
        Enums/TileInteractionType.h
        TileTypes/InteractableTile.cpp
        TileTypes/InteractableTile.h
        RoomChoice.cpp
        RoomChoice.h
        Managers/Random.cpp
        Managers/Random.h
        Managers/StringExtensions.cpp
        Managers/StringExtensions.h
        GameInstance.cpp
        GameInstance.h
        Map.cpp
        Map.h
        PlayerState.cpp
        PlayerState.h
        TileTypes/DoorTile.cpp
        TileTypes/DoorTile.h
        Enums/ForceGenerateState.h
        TileTypes/WeaponTile.cpp
        TileTypes/WeaponTile.h
        TileTypes/EnemyTile.cpp
        TileTypes/EnemyTile.h
        DungeonRoom.cpp
        DungeonRoom.h
        HallRoom.cpp
        HallRoom.h
        BossRoom.cpp
        BossRoom.h
        Menus/CombatMenu.cpp
        Menus/CombatMenu.h
        Managers/JsonManager.cpp
        Managers/JsonManager.h
        Enemies/Enemy.cpp
        Enemies/Enemy.h
        Enemies/bossEnemy.cpp
        Enemies/bossEnemy.h
        Enemies/basicEnemy.cpp
        Enemies/basicEnemy.h
        Enums/EnemyType.h
        Managers/ConsoleManager.cpp
        Managers/ConsoleManager.h
        Enums/ForegroundConsoleColor.h
        Enums/ForegroundConsoleColor.cpp
        TileTypes/WallTile.cpp
        TileTypes/WallTile.h
        TileTypes/EmptyTile.cpp
        TileTypes/EmptyTile.h
        EnemyAbilities/EnemyAbility.cpp
        EnemyAbilities/EnemyAbility.h
        EnemyAbilities/Ability_InstantPlayerDamage.cpp
        EnemyAbilities/Ability_InstantPlayerDamage.h
        EnemyAbilities/Ability_PlayerHeal.cpp
        EnemyAbilities/Ability_PlayerHeal.h
        EnemyAbilities/Ability_InstantCasterDamage.cpp
        EnemyAbilities/Ability_InstantCasterDamage.h
        Menus/LoreMenu.cpp
        Menus/LoreMenu.h

)